# my_simple_epoll_web_server

./: .gitignore  CMakeLists.txt  README.md
include/: connection.h  epoll_worker.h  epool_worker.h  file.h  file_reader.h  http.h  logger.h  poll_worker.h  strings.h
src/: connection.c  epoll_worker.c  epool_worker.c  file.c  file_reader.c  http.c  logger.c  main.c  poll_worker.c  strings.c
static/: example.js
